--- a/BibliotecaMusical_Presentacion/src/main/java/presentacion/Album.form
+++ b/BibliotecaMusical_Presentacion/src/main/java/presentacion/Album.form
@@ -290,7 +290,7 @@
                 <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                   <Color blue="ff" green="ff" red="ff" type="rgb"/>
                 </Property>
-                <Property name="text" type="java.lang.String" value="Principal"/>
+                <Property name="text" type="java.lang.String" value="Album"/>
               </Properties>
             </Component>
             <Container class="controlador.PanelRound" name="panelRound3">
